--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "storybook": "nuxt storybook"
+    "storybook": "nuxt storybook",
+    "build-storybook": "nuxt storybook build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -21,8 +22,10 @@
   "devDependencies": {
     "@babel/runtime-corejs3": "^7.14.7",
     "@nuxtjs/storybook": "^4.0.4",
+    "@storybook/addon-docs": "^6.3.4",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-knobs": "^6.3.0",
+    "chromatic": "^5.9.2",
     "core-js": "^3.15.2"
   }
 }
